i18n: Upgrade translations from crowdin (18eddfa6). (App)

--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
@@ -2715,7 +2715,7 @@
     <value>Змяніць прадвызначанае падключэнне</value>
   </data>
   <data name="Home_ConnectionCard_ChangeServer">
-    <value>Змяненне сервера праз</value>
+    <value>Змяніць сервер</value>
   </data>
   <data name="Home_ConnectionCard_Header_BrowseSafely">
     <value>Бяспечны прагляд з краіны</value>
